--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,85 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="black20">#33000000</color>
+    <color name="black55">#8C000000</color>
+    <color name="black60">#99000000</color>
+    <color name="black70">#B3000000</color>
+    <color name="white05">#0DFFFFFF</color>
+    <color name="white1">#99FFFFFF</color>
+    <color name="white50">#80FFFFFF</color>
+    <color name="white60">#99FFFFFF</color>
+    <color name="white10">#E6FFFFFF</color>
+    <color name="white20">#33FFFFFF</color>
+    <color name="white15">#26FFFFFF</color>
+    <color name="white40">#66FFFFFF</color>
+    <color name="white49">#7fffffff</color>
+    <color name="white80">#CCFFFFFF</color>
+    <color name="white70">#B3FFFFFF</color>
+    <color name="white90">#1AFFFFFF</color>
+    <color name="undetect">#FF567C79</color>
+    <color name="holo_red_dark">#ffcc0000</color>
+    <color name="ota_view_line">#E1E7EA</color>
+    <color name="ota_upgrade_complete">#555D61</color>
+    <color name="ota_upgrade_no_complete">#FF713C</color>
+    <color name="upgrade_press">#EFF1F2</color>
+    <color name="ota_upgrade_next_time">#99A3A8 </color>
+    <color name="ota_vertical_line">#E1E7EA</color>
+    <color name="alpha_70">#B30C1235</color>
+    <color name="ota_network_radio_stoke">#CCD2D6</color>
+    <color name="alpha_50">#80ffffff</color>
+    <color name="charge_dialog_text">#FF555D61</color>
+    <color name="text_fail">#FFFF713C</color>
+    <color name="dialog_divide_line">#E1E7EA</color>
+    <color name="color_ff713c">#ffff713c</color>
+    <color name="color_1A555D61">#1A555D61</color>
+    <color name="color_99A3A8">#ff99A3A8</color>
+    <color name="color_FFB980E6">#FFB980E6</color>
+    <color name="color_66FFFFFF">#66FFFFFF</color>
+    <color name="color_FF555D61">#FF555D61</color>
+    <color name="transparent">#00000000</color>
+    <color name="color_800c1235">#330c1235</color>
+    <color name="dash_bar_color">#cc567C79</color>
+    <color name="level_line_color">#0092F5</color>
+    <color name="dialog_no_check_name_color">#99A3A8</color>
+    <color name="dialog_no_check_size_color">#CCD2D6 </color>
+    <color name="dialog_check_name_color">#555D61</color>
+    <color name="dialog_check_size_color">#5B6266</color>
+    <color name="multi_map_mismatch_color">#E75934</color>
+    <color name="dialog_reset_left">#FF99A3A8</color>
+    <color name="blue">#FF55C3FB</color>
+    <color name="red">#FFFF6658</color>
+    <color name="gray_d8">#FFD8D8D8</color>
+    <color name="color_FF9E3C">#FF9E3C</color>
+    <color name="holo_red_light">#ffff4444</color>
+    <color name="color_55C3FB">#55C3FB</color>
+    <color name="color_555D61">#ff555D61</color>
+    <color name="color_55c3fb">#ff55C3FB</color>
+    <color name="color_cc53deb3">#CC53DEB3</color>
+    <color name="color_e6d75549">#E6D75549</color>
+    <color name="color_14B9FE">#14B9FE</color>
+    <color name="color_27B6FF">#27B6FF</color>
+    <color name="color_333333">#333333</color>
+    <color name="orange">#FF9933</color>
+    <color name="grey_blue">#9999CC</color>
+    <color name="color_road_place">#FFF3DC1F</color>
+    <color name="color_road_dot">#ff0000</color>
+    <color name="color_road_line">#0F0FF8</color>
+    <color name="color_road_line_width">#7f0F0FF8</color>
+    <color name="color_road_node_hot_area">#4D0F0FF8</color>
+    <color name="color_F2222222">#F2222222</color>
+    <color name="color_FF979797">#FF979797</color>
+    <color name="color_FF00E193">#FF00E193</color>
+    <color name="color_FF6B7175">#FF6B7175</color>
+    <color name="color_FF333333">#FF333333</color>
+    <color name="color_80000000">#80000000</color>
+    <color name="color_FF222222">#FF222222</color>
+    <color name="color_FFFA5151">#FFFA5151</color>
+    <color name="color_4D567C79">#4D567C79</color>
+    <color name="color_33ff4444">#33ff4444</color>
+    <color name="color_D2755E">#D2755E</color>
 
 
     <!-- 黑色-透明度 -->
